--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "next": "14.1.3",
+    "next-view-transitions": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.72.0"
